# oas-gen

./: .aidigestignore  .cursorrules  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  PROJECT_OVERVIEW.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  template_request.md
.github/workflows/: ci.yml
ast/: Cargo.toml
ast/src/: gen_ir.rs  lib.rs
cli/: Cargo.toml
cli/src/: main.rs
codegen/: Cargo.toml
codegen/src/: error.rs  lib.rs
docs/: API_REFERENCE.md  FAQ.md  TEMPLATE_GUIDE.md  TROUBLESHOOTING.md
examples/: README.md  edge-cases.yaml  openrouter.yml  petstore.json  unkey-fixed.yaml
generate/: Cargo.toml
generate/src/: lib.rs
generate/tests/: integration_test.rs
ir/: Cargo.toml
ir/src/: gen_ir.rs  lib.rs
lint/: Cargo.toml
lint/src/: api.rs
lint/src/lint/: ctx.rs  indexes.rs
lint/src/model/: pointers.rs  spans.rs
parser/: Cargo.toml
parser/src/: lib.rs  resolve.rs
parser2/: Cargo.toml
templates/rust-axum/: Cargo.toml
templates/rust-axum/src/: lib.rs  service_codegen.rs
templates/rust-axum/templates/: Cargo.toml.jinja  service_module.rs.jinja
templates/typescript/: Cargo.toml
templates/typescript/src/: lib.rs
templates/typescript/templates/: client.ts.jinja  enum.ts.jinja  interface.ts.jinja  sdk_export.ts.jinja  service.ts.jinja  type_alias.ts.jinja
